[package]
name = "cql-ws"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassandra-protocol = "3.0"
futures-util = "0.3.28"
http = "0.2.9"
rustls = { version = "0.21.2" ,features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { git = "https://github.com/conorbros/tokio-tungstenite", features = ["rustls-tls-native-roots"] }

