[package]
name = "cql-ws"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cassandra-protocol = "3.1.1"
futures-util = "0.3.28"
http = "0.2.9"
rustls = { version = "0.21.7" ,features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { git = "https://github.com/shotover/tokio-tungstenite", features = ["rustls-tls-native-roots"] }

